--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,22 @@
-target/
-*.class
+/org.eclipse.jdt.apt.core.prefs
+*target*
 *.jar
 *.war
 *.ear
-*.properties
-*.logs
-*.iml
-.idea/
-.eclipse
+*.class
+
+# eclipse specific git ignore
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
